@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+CorsixTH 0.69.2 - released January 2026
+-------------------------------------------------------------------------------
+# Bug Fixes
+* Fixed stuck Operating Theatre after rerouting patients.
+
+-------------------------------------------------------------------------------
 CorsixTH 0.69.1 - released August 2025
 -------------------------------------------------------------------------------
 # Bug Fixes
